--- a/getdinerotoday/templates/pages/base-creditcourse.html
+++ b/getdinerotoday/templates/pages/base-creditcourse.html
@@ -57,16 +57,16 @@
                      <a class="nav-link"  href="javascript: void(0);" aria-expanded="false"> <span class="toggle-none">How To Get A Great Car Loan<span class="fa arrow"></span></span></a>
                      <ul class="nav-second-level nav flex-column sub-menu" aria-expanded="false">
                          <li class="nav-item"><a href="{% url 'creditcourse:carloanone' %}" class="nav-link">How to Negotiate a Car Deal (And Save Big)</a></li>
-                         <li class="nav-item"><a href="{% url 'creditcourse:carloantwo' %}" class="nav-link">How To Do Google Remarketing Ads</a></li>
+                         <li class="nav-item"><a href="{% url 'creditcourse:carloantwo' %}" class="nav-link">How to Get a Car Loan (The Right Way)</a></li>
                      </ul>
                   </li>
-                  <li class="nav-item">
-                     <a class="nav-link"  href="javascript: void(0);" aria-expanded="false"> <span class="toggle-none">Templates For Credit Repair<span class="fa arrow"></span></span></a>
-                     <ul class="nav-second-level nav flex-column sub-menu" aria-expanded="false">
-                         <li class="nav-item"><a href="{% url 'creditcourse:carloanone' %}" class="nav-link">How to Negotiate a Car Deal (And Save Big)</a></li>
-                         <li class="nav-item"><a href="{% url 'creditcourse:carloantwo' %}" class="nav-link">How To Do Google Remarketing Ads</a></li>
-                     </ul>
-                  </li>
+{#                  <li class="nav-item">#}
+{#                     <a class="nav-link"  href="javascript: void(0);" aria-expanded="false"> <span class="toggle-none">Templates For Credit Repair<span class="fa arrow"></span></span></a>#}
+{#                     <ul class="nav-second-level nav flex-column sub-menu" aria-expanded="false">#}
+{#                         <li class="nav-item"><a href="{% url 'creditcourse:carloanone' %}" class="nav-link">How to Negotiate a Car Deal (And Save Big)</a></li>#}
+{#                         <li class="nav-item"><a href="{% url 'creditcourse:carloantwo' %}" class="nav-link">How To Do Google Remarketing Ads</a></li>#}
+{#                     </ul>#}
+{#                  </li>#}
                </ul>
             </div>
          </div>
