--- a/business/templates/businessCreditBuilding/goals.html
+++ b/business/templates/businessCreditBuilding/goals.html
@@ -39,7 +39,7 @@
                             Gauranteed <br><br><b> *Credit That Is Only In The Business Name*</b></h4></h4>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                                <a href="/fitness" target="_blank" class="btn btn-primary">
+                                <a href="/goals/buildbusinesscredit" target="_blank" class="btn btn-primary">
                                     Click For This Goal
                                 </a>
                             </div>
@@ -58,7 +58,7 @@
                         </h4>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                                <a href="/medical" target="_blank" class="btn btn-primary">
+                                <a href="/goals/immediatemoney" target="_blank" class="btn btn-primary">
                                     Click For This Goal
                                 </a>
                             </div>
@@ -72,23 +72,16 @@
                          height="270px" width="100%" alt="">
                     <div class="card-body">
                         <h4 class="card-text">Apply For A Business Loan <br><br><b>*Only For Those That Are Making At
-                            Least $5,000 Per Month Over The Last Three months*</b>
-                            <h4>
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <div class="btn-group">
-                                        <a href="/real_estate" target="_blank" class="btn btn-primary">Click For This
-                                            Goal</a>
-                                    </div>
-                                </div>
+                            Least $5,000 Per Month Over The Last Three months*</b></h4>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <div class="btn-group">
+                                <a href="/loanportal" target="_blank" class="btn btn-primary">Click For This
+                                    Goal</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-            <!-- ANCHOR_FOR_NEW_CARDS -->
-            <!-- Dont remove this comment -->
-
-        </div>
-
-        <div class="row">
             <div class="col-md-4 col-sm-6">
                 <div class="card mb-4 shadow-sm">
                     <img src="https://images.pexels.com/photos/210881/pexels-photo-210881.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
@@ -97,7 +90,7 @@
                         <h4 class="card-text">Fix & Or Build My Personal Credit</h4>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                                <a href="/fitness" target="_blank" class="btn btn-primary">
+                                <a href="/goals/buildpersonalcredit" target="_blank" class="btn btn-primary">
                                     Click For This Goal
                                 </a>
                             </div>
@@ -114,7 +107,7 @@
                             To Join*</b></h4>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                                <a href="/medical" target="_blank" class="btn btn-primary">
+                                <a href="/business/refer/" target="_blank" class="btn btn-primary">
                                     Click For This Goal
                                 </a>
                             </div>
@@ -130,18 +123,12 @@
                         <h4 class="card-text">Learn How To Market My Business & Get $500 In Marketing</h4>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                                <a href="/real_estate" target="_blank" class="btn btn-primary">Click For This Goal</a>
+                                <a href="/business/marketing-business/" target="_blank" class="btn btn-primary">Click For This Goal</a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <!-- ANCHOR_FOR_NEW_CARDS -->
-            <!-- Dont remove this comment -->
-
-        </div>
-
-        <div class="row">
             <div class="col-md-4 col-sm-6">
                 <div class="card mb-4 shadow-sm">
                     <img src="https://images.pexels.com/photos/210881/pexels-photo-210881.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
@@ -150,7 +137,7 @@
                         <h4 class="card-text">Repair My Business Credit</h4>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                                <a href="/fitness" target="_blank" class="btn btn-primary">
+                                <a href="/goals/repairbusinesscredit/" target="_blank" class="btn btn-primary">
                                     Click For This Goal
                                 </a>
                             </div>
@@ -167,7 +154,7 @@
                             Card Payments. <br><br><b>*Get A $50-$100 Sign Up Bonus For Your Merchant Account*</b></h4>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                                <a href="/medical" target="_blank" class="btn btn-primary">
+                                <a href="/business/merchant-account/" target="_blank" class="btn btn-primary">
                                     Click For This Goal
                                 </a>
                             </div>
@@ -183,14 +170,12 @@
                         <h4 class="card-text">I Want To Learn How To Offer Financing To My Existing Customers</h4>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                                <a href="/real_estate" target="_blank" class="btn btn-primary">Click For This Goal</a>
+                                <a href="/business/customer-financing-offer/" target="_blank" class="btn btn-primary">Click For This Goal</a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <!-- ANCHOR_FOR_NEW_CARDS -->
-            <!-- Dont remove this comment -->
 
         </div>
 
