--- a/goals/templates/repairbusinesscredit/base-repairbusinesscredit.html
+++ b/goals/templates/repairbusinesscredit/base-repairbusinesscredit.html
@@ -12,12 +12,9 @@
                   <p class="text-muted mv-0 toggle-none">Welcome</p>
                </div>
                <ul class="metisMenu nav flex-column" id="menu">
-                  <li class="nav-heading"><span>MAIN</span></li>
-                  <!-- <li class="nav-item"><a href="{% url 'business:domain' %}" class="nav-link">Go Back To Main Portal</a></li> -->
                   <li class="nav-item"><a href="/" class="nav-link">Go Back To Main Portal</a></li>
-
-                  <li class="nav-item"><a href="{% url 'loanportal:loanapplication' %}" class="nav-link">Apply For Business Loans</a></li>
-                  <li class="nav-item"><a href="{% url 'loanportal:loanoffers' %}" class="nav-link">See Your Financing Offers</a></li>
+                  <li class="nav-item"><a href="/goals/repairbusinesscredit/1" class="nav-link">sign up for business credit monitoring</a></li>
+                  <li class="nav-item"><a href="/goals/repairbusinesscredit/2" class="nav-link">Business credit repair</a></li>
                </ul>
             </div>
          </div>
