portal goals pages

--- a/getdinerotoday/templates/layout/BaseLayout.html
+++ b/getdinerotoday/templates/layout/BaseLayout.html
@@ -18,5 +18,7 @@
 
 {% include "components/Footer.html" %}
 {% include "components/JavaScriptBlock.html" %}
+{% block javascriptblock %}	
+{% endblock javascriptblock %}
 </body>
 </html>
