--- a/getdinerotoday/templates/pages/base-business.html
+++ b/getdinerotoday/templates/pages/base-business.html
@@ -187,3 +187,7 @@
 {% endblock navigation %}
 {% block content %}
 {% endblock content %}
+
+{% block javascriptblock %}
+    
+{% endblock javascriptblock %}
