--- a/business/templates/home/create_my_portal.html
+++ b/business/templates/home/create_my_portal.html
@@ -53,10 +53,10 @@
             <div class="col-md-3 col-lg-3 col-sm-12 m-1">
                 <div class="card" style="width: 18rem;">
                   <h5 class="card-header text-center pb-0">
-                    <a href="#">{{ portal_goal.name|title }}</a>
+                    <a href="{{ portal_goal.get_absolute_url }}">{{ portal_goal.name|title }}</a>
                   </h5>
                   <div class="card-body">
-                    <p class="card-text">{{ portal_goal.portals.all.count }} Portals added.</p>
+                    <p class="card-text">{{ portal_goal.portals.all.count }} site goals added.</p>
                   </div>
                   <div class="card-footer text-center">
                     <!--<a href="#" class="card-link">Edit</a> -->
