--- a/goals/templates/buildbusinesscredit/base-buildbusinesscredit.html
+++ b/goals/templates/buildbusinesscredit/base-buildbusinesscredit.html
@@ -16,26 +16,100 @@
                         <a href="/" class="nav-link"><span class="toggle-none">Go Back To Main Portal</span></a>
                     </li>
                     <li class="nav-item">
-                        <a href="/goals/buildbusinesscredit/1" class="nav-link"><span class="toggle-none">upgrade to full business builder program with no money down</span></a>
+                        <a href="{% url 'goals:buildbusinesscredit' %}" class="nav-link"><span class="toggle-none">Build Business Credit & Access Business Credit That Isn't Personally Gauranteed</span></a>
                     </li>
                     <li class="nav-item">
-                        <a href="/goals/buildbusinesscredit/2" class="nav-link"><span class="toggle-none">create my business credit building plan</span></a>
+                        <a href="/goals/buildbusinesscredit_1" class="nav-link"><span class="toggle-none">upgrade to full business builder program with no money down</span></a>
                     </li>
                     <li class="nav-item">
-                        <a href="/goals/buildbusinesscredit/3" class="nav-link"><span class="toggle-none">business credit building</span></a>
+                        <a href="{% url 'business:business-credit-plan' %}" class="nav-link"><span class="toggle-none">create my business credit building plan</span></a>
                     </li>
                     <li class="nav-item">
-                        <a href="/goals/buildbusinesscredit/4" class="nav-link"><span class="toggle-none">choose business credit building steps you need done for you</span></a>
+                        <a class="nav-link" href="javascript: void(0);" aria-expanded="false"><span class="toggle-none">Business Credit Building <span
+                                class="fa arrow"></span></span></a>
+                        <ul class="nav-second-level nav flex-column " aria-expanded="false">
+                            <li class="nav-item"><a href="/business/business-entity"
+                                                    class="nav-link">Business
+                                Entity</a></li>
+                            <li class="nav-item"><a href="/business/ein" class="nav-link">EIN
+                                Number</a></li>
+                            <li class="nav-item"><a href="/business/business-license"
+                                                    class="nav-link">Business
+                                License</a></li>
+                            <li class="nav-item"><a
+                                    href="/business/website-creation-options"
+                                    class="nav-link">Website
+                                Creation</a></li>
+                            <li class="nav-item"><a href="/business/fax-number-options"
+                                                    class="nav-link">Fax
+                                Number</a></li>
+                            <li class="nav-item"><a href="/business/four-eleven"
+                                                    class="nav-link">411
+                                Listings</a></li>
+                            <li class="nav-item"><a href="/business/professional-email"
+                                                    class="nav-link">Professional
+                                Email Address</a></li>
+                            <li class="nav-item"><a href="/business/domain"
+                                                    class="nav-link">Domain</a></li>
+                            <li class="nav-item"><a href="/business/toll-free-options"
+                                                    class="nav-link">Toll Free
+                                Number</a></li>
+                            <li class="nav-item"><a href="/business/virtual-address"
+                                                    class="nav-link">Virtual
+                                Address</a></li>
+                            <li class="nav-item"><a href="/business/business-bank-account"
+                                                    class="nav-link">Business
+                                Bank Account</a></li>
+                            <li class="nav-item"><a href="/business/merchant-account"
+                                                    class="nav-link">Merchant
+                                Account</a></li>
+                            <li class="nav-item"><a href="/business/duns" class="nav-link">Duns
+                                Number</a></li>
+                            <li class="nav-item"><a href="/business/sic" class="nav-link">SIC
+                                & NAISC Codes</a>
+                            </li>
+                            <li class="nav-item"><a href="/business/business-good-standing"
+                                                    class="nav-link">Checking
+                                If Your Business Is In Good Standing </a></li>
+                            <li class="nav-item"><a
+                                    href="/business/business-in-good-standing"
+                                    class="nav-link">How
+                                To Get Your Business Back In Good Standing</a></li>
+                        </ul>
                     </li>
                     <li class="nav-item">
-                        <a href="/goals/buildbusinesscredit/5" class="nav-link"><span class="toggle-none">businesss credit bureaus to become established with</span></a>
+                        <a href="/goals/buildbusinesscredit_4" class="nav-link"><span class="toggle-none">choose business credit building steps you need done for you</span></a>
                     </li>
                     <li class="nav-item">
-                        <a href="/goals/buildbusinesscredit/6" class="nav-link"><span class="toggle-none">business credit building course</span></a>
+                        <a class="nav-link" href="javascript: void(0);" aria-expanded="false"> <span
+                                class="toggle-none"> Business Credit Bureaus To Become Established With  <span
+                                class="fa arrow"></span></span></a>
+                        <ul class="nav-second-level nav flex-column sub-menu" aria-expanded="false">
+                            <li class="nav-item"><a href="/business/experian" class="nav-link"> Experian
+                                Business </a></li>
+                            <li class="nav-item"><a href="/business/dunn-brad" class="nav-link"> Dunn &
+                                Bradsheet </a></li>
+                            <li class="nav-item"><a href="/business/equifax" class="nav-link"> Equifax
+                                Business </a></li>
+                        </ul>
                     </li>
                     <li class="nav-item">
-                        <a href="/goals/buildbusinesscredit/7" class="nav-link"><span class="toggle-none">corporate credit list</span></a>
+                        <a href="{% url 'businesscreditcourse:home' %}" class="nav-link"><span class="toggle-none">business credit building course</span></a>
                     </li>
+                   <li class="nav-item">
+                    <a class="nav-link" href="javascript: void(0);" aria-expanded="false"> <span class="toggle-none">Corporate Credit List<span
+                            class="fa arrow"></span></span></a>
+                    <ul class="nav-second-level nav flex-column sub-menu" aria-expanded="false">
+                        <li class="nav-item"><a href="/business/vendor-list" class="nav-link">Starter Vendor
+                            List</a></li>
+                        <li class="nav-item"><a href="/business/store-credit-vendor-list" class="nav-link">Store
+                            Credit Vendor List</a></li>
+                        <li class="nav-item"><a href="/business/business-credit-vendor" class="nav-link">Revolving
+                            Business Credit Vendor List</a></li>
+                        <li class="nav-item"><a href="/business/cc-credit-vendor" class="nav-link">Credit
+                            Card No Personal Gaurantee Vendor List</a></li>
+                    </ul>
+                </li>
                 </ul>
             </div>
         </div>
