--- a/goals/templates/marketingbusiness/base-marketingbusiness.html
+++ b/goals/templates/marketingbusiness/base-marketingbusiness.html
@@ -13,7 +13,9 @@
                 </div>
                 <ul class="metisMenu nav flex-column" id="menu">
                     <li class="nav-item"><a href="/" class="nav-link">Go Back To Main Portal</a></li>
-                    <li class="nav-item"><a href="{% url 'goals:merchant' %}" class="nav-link">Merchant Account</a></li>
+                    <li class="nav-item"><a href="{% url 'goals:marketingbusiness' %}" class="nav-link">marketing Your
+                        business
+                    </a></li>
                 </ul>
             </div>
         </div>
