--- a/goals/templates/offeringfinanicg/base-offeringfinancing.html
+++ b/goals/templates/offeringfinanicg/base-offeringfinancing.html
@@ -12,8 +12,10 @@
                     <p class="text-muted mv-0 toggle-none">Welcome</p>
                 </div>
                 <ul class="metisMenu nav flex-column" id="menu">
+                    <li class="nav-heading"><span>MAIN</span></li>
                     <li class="nav-item"><a href="/" class="nav-link">Go Back To Main Portal</a></li>
-                    <li class="nav-item"><a href="{% url 'goals:merchant' %}" class="nav-link">Merchant Account</a></li>
+                    <li class="nav-item"><a href="{% url 'goals:offeringfinancing' %}" class="nav-link">See The
+                        Different Ways You Can Offer Financing To Your Customers</a></li>
                 </ul>
             </div>
         </div>
