--- a/goals/templates/buildbusinesscredit/2.html
+++ b/goals/templates/buildbusinesscredit/2.html
@@ -1,69 +1,52 @@
 {% extends "buildbusinesscredit/base-buildbusinesscredit.html" %}
 {% load static %}
 {% block content %}
-
-
     <div class="row page-header">
         <div class="col-lg-6 align-self-center ">
-            <h2> Fix My Business Credit</h2></div>
+            <h2> Create My Corporate Business Credit Plan</h2></div>
     </div>
 
     <section class="main-content">
 
         <div class="row">
             <div class="col-md-12">
-                <iframe width="100%" height="515" src="https://www.youtube.com/embed/CPsagcbNH_g" frameborder="0"
+                <iframe width="100%" height="515" src="https://www.youtube.com/embed/cW3SMdOtbJw" frameborder="0"
                         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
             </div>
         </div>
-        <h2 style="text-align:center;">Fix My Business Credit</h2><br>
-        <div class="row">
-            <div class="col-md-4">
-                <div class="card mb-4 shadow-sm">
-                    <img src="http://millennialbusinessbuilders.com/ex.png" height="270px" width="100%" alt="">
-                    <div class="card-body">
-                        <p class="card-text">Click The Button Below To Fix Your Business Experian Report</p>
-                        <div class="d-flex justify-content-between align-items-center">
-                            <div class="btn-group">
-                                <a target="_blank" class="btn btn-primary"
-                                   href="https://www.experian.com/small-business/business-credit-information.jsp">Fix My
-                                    Business Report</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card mb-4 shadow-sm">
-                    <img src="http://millennialbusinessbuilders.com/equifax.png" height="270px" width="100%" alt="">
-                    <div class="card-body">
-                        <p class="card-text">Click The Button Below To Fix Your Business Equifax Report</p>
-                        <div class="d-flex justify-content-between align-items-center">
-                            <div class="btn-group">
-                                <a target="_blank" class="btn btn-primary" href="https://www.equifax.com/business/">Fix
-                                    My Business Report</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card mb-4 shadow-sm">
-                    <img src="http://millennialbusinessbuilders.com/dandb.png" height="270px" width="100%" alt="">
-                    <div class="card-body">
-                        <p class="card-text">Click The Button Below To Fix Your Dunn & Bradstreet Report</p>
-                        <div class="d-flex justify-content-between align-items-center">
-                            <div class="btn-group">
-                                <a target="_blank" class="btn btn-primary"
-                                   href="https://www.dnb.com/perspectives/small-business/3-ways-start-rebuilding-companys-db-business-credit-scores-ratings.html">Fix
-                                    My Business Report</a>
-                            </div>
+        <h2 style="text-align:center;">My Corporate Business Credit Solution</h2><br>
+        <form accept-charset="UTF-8" action="." method="post">
+            {% csrf_token %}
+            <div class="row">
+                <div class="col-md-12">
 
-                        </div>
+                    <div class="form-group">
+                        <label for="businessname">How Long Have You Been In Incorporated In Your Business?</label>
+                        <select class="form-control" id="business_time" name="business_time">
+                            <option value="1">Less Than 1 year</option>
+                            <option value="2">1 Year - 2 Years</option>
+                            <option value="3">3 years Or More</option>
+                        </select>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="businessname">How Many Tradelines Do You Currently Have Reporting To All Three
+                            Business Credit Bureaus (Dunn & Bradstreet, Business Equifax, And/Or Business Experian)
+                        </label>
+                        <select class="form-control" id="trade_lines" name="trade_lines">
+                            <option value="1">4 Or Less Tradelines Reporting</option>
+                            <option value="2">5-9 Tradelines Reporting</option>
+                            <option value="3">10 or More Tradelines Reporting</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <button type="submit" class="btn btn-primary">See Your Business Credit Building Plan</button>
                     </div>
                 </div>
             </div>
-        </div>
+        </form>
+
+
     </section>
 {% endblock %}
