--- a/goals/templates/buildpersonalcredit/base-buildpersonalcredit.html
+++ b/goals/templates/buildpersonalcredit/base-buildpersonalcredit.html
@@ -16,13 +16,16 @@
                         <a href="/" class="nav-link"><span class="toggle-none">Go Back To Main Portal</span></a>
                     </li>
                     <li class="nav-item">
-                        <a href="/goals/buildpersonalcredit/1" class="nav-link"><span class="toggle-none">create my credit repair plan </span></a>
+                        <a href="{% url 'goals:buildpersonalcredit' %}" class="nav-link"><span class="toggle-none">Go Back To Main Portal</span></a>
                     </li>
                     <li class="nav-item">
-                        <a href="/goals/buildpersonalcredit/2" class="nav-link"><span class="toggle-none">Personal credit course</span></a>
+                        <a href="/business/credit-situation/" class="nav-link"><span class="toggle-none">create my credit repair plan </span></a>
                     </li>
                     <li class="nav-item">
-                        <a href="/goals/buildpersonalcredit/3" class="nav-link"><span class="toggle-none">Personal credit primary tradelines</span></a>
+                        <a href="/creditcourse/maincreditfile/" class="nav-link"><span class="toggle-none">Personal credit course</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="/business/credit-trade-lines/" class="nav-link"><span class="toggle-none">Personal credit primary tradelines</span></a>
                     </li>
                 </ul>
             </div>
