--- a/goals/templates/immediatemoney/base-immediatemoney.html
+++ b/goals/templates/immediatemoney/base-immediatemoney.html
@@ -13,8 +13,36 @@
                 </div>
                 <ul class="metisMenu nav flex-column" id="menu">
                     <li class="nav-item"><a href="/" class="nav-link">Go Back To Main Portal</a></li>
-                    <li class="nav-item"><a href="/goals/immediatemoney/1" class="nav-link">Create My Financing Plan</a></li>
-                    <li class="nav-item"><a href="/goals/immediatemoney/2" class="nav-link">Full List Of Financing Products</a></li>
+                    <li class="nav-item"><a href="{% url 'goals:immediatemoney' %}" class="nav-link">Get Immediate Money For My Business</a></li>
+                    <li class="nav-item"><a href="/business/financing/" class="nav-link">Create My Financing Plan</a></li>
+                     <li class="nav-item">
+                    <a class="nav-link" href="javascript: void(0);" aria-expanded="false"> <span class="toggle-none">Full List Of Financing Products<span
+                            class="fa arrow"></span></span></a>
+                    <ul class="nav-second-level nav flex-column sub-menu" aria-expanded="false">
+                        <li class="nav-item"><a href="/business/personal-credit-card" class="nav-link">Personal
+                            Credit Cards</a></li>
+                        <li class="nav-item"><a href="/business/business-credit-card" class="nav-link">Business
+                            Credit Cards</a></li>
+                        <li class="nav-item"><a href="/business/short-term-loan" class="nav-link">Short Term
+                            Loans</a></li>
+                        <li class="nav-item"><a href="/business/business-term-loan" class="nav-link">Business
+                            Term Loans</a></li>
+                        <li class="nav-item"><a href="/business/small-business-loan" class="nav-link">Small
+                            Business Adminstration Loans</a></li>
+                        <li class="nav-item"><a href="/business/personal-loan" class="nav-link">Personal
+                            Loans</a></li>
+                        <li class="nav-item"><a href="/business/business-line-credit" class="nav-link">Business
+                            Lines Of Credit</a></li>
+                        <li class="nav-item"><a href="/business/nocredit-financings" class="nav-link">No
+                            Credit Check Loans</a></li>
+                        <li class="nav-item"><a href="/business/invoice-factoring" class="nav-link">Invoice
+                            Factoring</a></li>
+                        <li class="nav-item"><a href="/business/invoice-financings" class="nav-link">Invoice
+                            Financing</a></li>
+                        <li class="nav-item"><a href="/business/equipment-financings" class="nav-link">Equipment
+                            Financing</a></li>
+                    </ul>
+                </li>
                 </ul>
             </div>
         </div>
