--- a/goals/templates/makeextramoney/base-makeextramoney.html
+++ b/goals/templates/makeextramoney/base-makeextramoney.html
@@ -13,8 +13,7 @@
                </div>
                <ul class="metisMenu nav flex-column" id="menu">
                   <li class="nav-item"><a href="/" class="nav-link">Go Back To Main Portal</a></li>
-                  <li class="nav-item"><a href="{% url 'loanportal:loanapplication' %}" class="nav-link">Apply For Business Loans</a></li>
-                  <li class="nav-item"><a href="{% url 'loanportal:loanoffers' %}" class="nav-link">See Your Financing Offers</a></li>
+                  <li class="nav-item"><a href="{% url 'goals:makeextramoney' %}" class="nav-link">make extra money referring friends</a></li>
                </ul>
             </div>
          </div>
