--- a/goals/templates/buildpersonalcredit/base-buildpersonalcredit.html
+++ b/goals/templates/buildpersonalcredit/base-buildpersonalcredit.html
@@ -16,7 +16,7 @@
                         <a href="/" class="nav-link"><span class="toggle-none">Go Back To Main Portal</span></a>
                     </li>
                     <li class="nav-item">
-                        <a href="{% url 'goals:buildpersonalcredit' %}" class="nav-link"><span class="toggle-none">Go Back To Main Portal</span></a>
+                        <a href="{% url 'goals:buildpersonalcredit' %}" class="nav-link"><span class="toggle-none">Fix & Or Build My Personal Credit</span></a>
                     </li>
                     <li class="nav-item">
                         <a href="/business/credit-situation/" class="nav-link"><span class="toggle-none">create my credit repair plan </span></a>
