--- a/goals/templates/marketingbusiness/marketingbusiness.html
+++ b/goals/templates/marketingbusiness/marketingbusiness.html
@@ -11,30 +11,37 @@
 
     <div class="row page-header">
         <div class="col-lg-6 align-self-center ">
-            <h2> Fix My Business Credit</h2></div>
+            <h2>Marketing Your Business</h2></div>
     </div>
 
     <section class="main-content">
 
         <div class="row">
             <div class="col-md-12">
-                <iframe width="100%" height="515" src="https://www.youtube.com/embed/CPsagcbNH_g" frameborder="0"
+                <iframe width="100%" height="515" src="https://www.youtube.com/embed/pvZMgOeAF_4" frameborder="0"
                         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
             </div>
         </div>
-        <h2 style="text-align:center;">Fix My Business Credit</h2><br>
+        <style media="screen">
+            .card-body {
+                text-align: center;
+
+            }
+        </style>
+        <h2 style="text-align:center;">Marketing Your Business</h2><br>
+
         <div class="row">
             <div class="col-md-4">
                 <div class="card mb-4 shadow-sm">
-                    <img src="http://millennialbusinessbuilders.com/ex.png" height="270px" width="100%" alt="">
+                    <img src="https://images.pexels.com/photos/669610/pexels-photo-669610.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+                         height="270px" width="100%" alt="">
                     <div class="card-body">
-                        <p class="card-text">Click The Button Below To Fix Your Business Experian Report</p>
+                        <p class="card-text">Click The Button Below To Go To Our Marketing Course</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                                <a target="_blank" class="btn btn-primary"
-                                   href="https://www.experian.com/small-business/business-credit-information.jsp">Fix My
-                                    Business Report</a>
+                                <a target="_blank" class="btn btn-primary" href="{% url 'marketingcourse:mainfile' %}">Go
+                                    To Marketing Course</a>
                             </div>
                         </div>
                     </div>
@@ -42,30 +49,16 @@
             </div>
             <div class="col-md-4">
                 <div class="card mb-4 shadow-sm">
-                    <img src="http://millennialbusinessbuilders.com/equifax.png" height="270px" width="100%" alt="">
+                    <img src="https://images.pexels.com/photos/802024/pexels-photo-802024.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+                         height="270px" width="100%" alt="">
                     <div class="card-body">
-                        <p class="card-text">Click The Button Below To Fix Your Business Equifax Report</p>
-                        <div class="d-flex justify-content-between align-items-center">
-                            <div class="btn-group">
-                                <a target="_blank" class="btn btn-primary" href="https://www.equifax.com/business/">Fix
-                                    My Business Report</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card mb-4 shadow-sm">
-                    <img src="http://millennialbusinessbuilders.com/dandb.png" height="270px" width="100%" alt="">
-                    <div class="card-body">
-                        <p class="card-text">Click The Button Below To Fix Your Dunn & Bradstreet Report</p>
+                        <p class="card-text">Click The Button Below To Get $500+ In Advertising Coupons</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
                                 <a target="_blank" class="btn btn-primary"
-                                   href="https://www.dnb.com/perspectives/small-business/3-ways-start-rebuilding-companys-db-business-credit-scores-ratings.html">Fix
-                                    My Business Report</a>
+                                   href="https://howardkingston.com/hustlers-guide-1420-free-ad-credit/">Click Here To
+                                    Get <br> $500+ In Advertising Coupons</a>
                             </div>
-
                         </div>
                     </div>
                 </div>
@@ -74,4 +67,5 @@
 
 
     </section>
+
 {% endblock %}
